k8s/antifraudK8s/antifraud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antifraud-app-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: antifraudK8s-app
  template:
    metadata:
      labels:
        app: antifraudK8s-app
    spec:
      containers:
        - name: antifraud-app
          image: lucassanoss/antifraud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
