k8s/antifraudK8s/antifraud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antifraud-service
spec:
  selector:
    app: antifraudK8s-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8086
  type: NodePort
