k8s/antifraudK8s/antifraud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: antifraud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: antifraud-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: antifraud-service
                port:
                  number: 8086
